# spacetime_physics

./: Cargo.toml  Justfile  README.md  logs.txt
client/: Cargo.toml
client/src/: main.rs  utils.rs
client/src/module_bindings/: account_table.rs  account_type.rs  collider_type.rs  cuboid_type.rs  friction_type.rs  mat_3_type.rs  mod.rs  on_connect_reducer.rs  on_disconnected_reducer.rs  (+17 more)
server/src/: lib.rs
spacetime_physics/: Cargo.toml
spacetime_physics/src/: collisions.rs  engine.rs  lib.rs  tables.rs  tmp.rs
spacetime_physics/src/collisions/: detection.rs  manifold.rs  mod.rs  shape_wrapper.rs  shapes.rs
spacetime_physics/src/engine/: collision_detection.rs  collisions.rs  mod.rs  physic_entity.rs  qvbh.rs  rigid_body_data.rs  trigger_data.rs  utils.rs  xpbd.rs
spacetime_physics/src/engine/collisions/: detection.rs  manifold.rs  mod.rs  shapes.rs
spacetime_physics/src/engine/collisions2/: detection.rs  manifold.rs
spacetime_physics/src/engine/constraints/: mod.rs  penetration.rs  position.rs
spacetime_physics/src/engine/solvers/: impulse.rs  mod.rs  position.rs
spacetime_physics/src/engine/xpbd/: integrate_bodies.rs  integrate_bodies_tests.rs  mod.rs
spacetime_physics/src/math/: mat3.rs  mat3_tests.rs  mod.rs  quat.rs  quat_tests.rs  transform.rs  vec3.rs  vec3_tests.rs
spacetime_physics/src/queries/: ray.rs
spacetime_physics/src/tables/: colliders.rs  mod.rs  physics_world.rs  qbvh.rs  raycast.rs  rigid_body.rs  rigid_body_properties.rs  trigger.rs  trigger_entities.rs
spacetime_physics/src/utils/: get_bodies.rs  log_stopwatch.rs
